2007-07-29  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #458820 from Cosimo Cecchi

	* em-mailer-prefs.c: (photo_toggle_changed),
	(em_mailer_prefs_construct):

2007-07-29  Srinivasa Ragavan  <sragavan@novell.com>

	* em-mailer-prefs.c: (em_mailer_prefs_construct): Fix a crash while
	starting preferences window.

2007-07-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #303937

	* message-list.c: (ml_tree_drag_data_received):
	Don't do anything when ml->folder is NULL.

2007-07-27  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	* em-utils.c: (em_utils_save_parts): Do not free const pointer.
	Plugged memory leak.

2007-07-26  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #273386

	* em-format-html.c: (efh_format_timeout):
	Clear preview and show text "Formatting message" at the beginning.

	* em-format-html-display.c: (efhd_attachment_show):
	Changed debug output to print also pointer address.
	* em-format.c: (emf_clear_puri_node):
	Added debug output to see which memory is going to be freed.
	* em-format-html.c: (efh_url_requested), (efh_format_headers):
	Warnings cleanup.

2007-07-26  Sankar P  <psankar@novell.com>

	* Committed on behalf of  Atos Origin Communication Systems 
	<support-syscom@osorigin.com>
	* em-composer-utils.c: (em_utils_send_receipt):
	- Fixes malformed body part headers for a MDN
	See bug #458275

2007-07-26  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	* em-folder-browser.c: (emfb_search_search_activated): Plugged memory
	leak.

2007-07-17  Sankar P  <psankar@novell.com>

	* em-format-html.c: (efh_format_headers):
	Decodes Face header and displays the image.

2007-07-16  Sankar P  <psankar@novell.com>

	* em-composer-prefs.c: (em_composer_prefs_construct):
	* em-composer-prefs.h:
	* mail-config.glade:
	Provide support for keeping your signature on top
	while replying.

2007-07-11  Srinivasa Ragavan  <sragavan@novell.com>

	* em-format-html-display.c: (efhd_attachment_button): Take warning
	softly instead of a crash.
